# shuttle

codegen/src/: lib.rs
services/shuttle-salvo/: Cargo.toml
