[package]
name = "shuttle-salvo"
version = "0.49.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a salvo webserver on shuttle"
repository = "https://github.com/shuttle-hq/shuttle"
keywords = ["shuttle-service", "salvo"]

[workspace]

[dependencies]
salvo = { version = "0.75.0", git = "https://github.com/Samyak2/salvo", branch = "fix-deny-unknown" }
shuttle-runtime = { path = "../../runtime", version = "0.49.0", default-features = false }
